558 added real links to contact form

--- a/app/views/7-0/manual-page.html
+++ b/app/views/7-0/manual-page.html
@@ -83,7 +83,7 @@
                 </p>
                 <div class="gem-c-govspeak govuk-govspeak">
                     <!-- <p></p> -->
-                    <p>Please <a href="#feedback">send feedback</a> to help make this manual better.</p>
+                    <p>Please <a href="https://www.gov.uk/contact/govuk">send feedback</a> to help make this manual better.</p>
                 </div>
             {% else %}
             <article aria-labelledby="section-title">
