--- a/app/views/includes/manual-header.html
+++ b/app/views/includes/manual-header.html
@@ -59,7 +59,7 @@
     </div>
     <div class="secondary">
         <div class="secondary-inner">
-            <p><a class="feedback" href="#">Give feedback about this page</a></p>
+            <p><a class="feedback" href="https://www.gov.uk/contact/govuk">Give feedback about this page</a></p>
         </div>
     </div>
 </header>
