--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,6 +25,7 @@
                     <li><span class="govuk-!-font-weight-bold">pdf link</span> - moved from collections page to direct link on manual</li>
                     <li><span class="govuk-!-font-weight-bold">section titles</span> - rule ranges added in brackets</li>
                     <li><span class="govuk-!-font-weight-bold">section summaries</span> - updated</li>
+                    <li><span class="govuk-!-font-weight-bold">feedback / surveys</span> - links to contact page and survey added</li>
                 </ul>
             </li>
             <li>
