--- a/app/views/includes/manual-header.html
+++ b/app/views/includes/manual-header.html
@@ -1,5 +1,5 @@
 {% set _manualHeaderTitle = _manualHeaderTitle or "Manual title" %}
-<div class="full-page-width-wrapper" style="margin-top:-30px">     
+<!-- <div class="full-page-width-wrapper" style="margin-top:-30px">     
     <div class="gem-c-phase-banner govuk-phase-banner">
         <p class="govuk-phase-banner__content">
             <strong class="govuk-tag govuk-phase-banner__content__tag">beta</strong>
@@ -7,7 +7,7 @@
             </span>
         </p>
     </div>
-</div>
+</div> -->
 <div class="gem-c-contextual-breadcrumbs" >
     <div class="gem-c-breadcrumbs govuk-breadcrumbs" >
         <ol class="govuk-breadcrumbs__list">
