updated legislative list component

--- a/app/views/7-0/manual-components.html
+++ b/app/views/7-0/manual-components.html
@@ -107,7 +107,7 @@ sup {
             <li class="visuallyhidden">Hidden bullet 2</li>
         </ul>
 
-        <ol class="legislative-list govuk-list govuk-list--number" style="list-style-type:none">
+        <ol class="legislative-list govuk-list govuk-list--number" style="list-style-type:none; padding-left: 0">
             <li>1. Item 1</li>
             <li>2. Item 2
                 <ol class="govuk-list govuk-list--number" style="list-style-type:none">
