feedback page and textflow bug

--- a/app/views/7-0/manual-page.html
+++ b/app/views/7-0/manual-page.html
@@ -76,14 +76,23 @@
             {% if myData.manualpage == "feedback" %}
             <article aria-labelledby="section-title">
                 <h1 id="section-title" class="section-title section-title-with-summary">
-                    Feedback
+                    Contact us
                 </h1>
                 <p class="summary">
-                    How to send the Education and Skills Funding Agency (ESFA) comments and suggestions about this manual.
+                    How to get help, support and send feedback. 
                 </p>
                 <div class="gem-c-govspeak govuk-govspeak">
-                    <!-- <p></p> -->
-                    <p>Please <a href="https://www.gov.uk/contact/govuk">send feedback</a> to help make this manual better.</p>
+                    <h3 class="govuk-heading-m">Feedback</h3>
+                    <p class="govuk-body"><a href="https://www.smartsurvey.co.uk/s/fundingrules/">Complete our survey</a> to help us make the funding rules clearer.</p>
+                    <h3 class="govuk-heading-m">Training providers</h3>
+                    <p class="govuk-body">For help and support you can:</p>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>email us at <a href="mailto:SDE.servicedesk@education.gov.uk">SDE.servicedesk@education.gov.uk </a> </li>
+                        <li>phone us on 0370 267 000</li>
+                        <li>contact your provider management advisor </li>
+                    </ul>
+                    <h3 class="govuk-heading-m">Employers</h3>
+                    <p class="govuk-body">For help and support, phone us on 0800 015 0600.</p>
                 </div>
             {% else %}
             <article aria-labelledby="section-title">
