updates to rules list

--- a/app/views/7-0/rules-list.html
+++ b/app/views/7-0/rules-list.html
@@ -214,17 +214,17 @@
               Guidance
             </p>
             <h1 class="gem-c-title__text gem-c-title__text--long">
-            Apprenticeship funding rules - {{_yearRangeStart}} to {{_yearRangeEnd}}
+              Apprenticeship funding rules - {{_yearRangeStart}} to {{_yearRangeEnd}}
             </h1>
           </div>
         </div>
         <div class="column-two-thirds">
 
           <p class="gem-c-lead-paragraph ">
-              These rules are for apprenticeships that started between 1 August {{_yearRangeStart}} and 31 July {{_yearRangeEnd}}. 
+              These rules are for apprenticeships that started between 1 August {{_yearRangeStart}} and 31 July {{_yearRangeEnd}}.
           </p>
           <p class="gem-c-lead-paragraph ">
-            View <a href="rules-years">rules that apply to other apprenticeship start dates</a>.
+            You can <a href="rules-years">view rules that apply to other apprenticeship start dates</a>.
           </p>
         </div>
       </div>
@@ -367,7 +367,7 @@
                   </section>
 
                   <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
-                      Summary of changes
+                      Other information
                     </h2>
 
                   <section class="attachment embedded" id="attachment_2701269">
@@ -375,7 +375,7 @@
                           <a aria-hidden="true" class="thumbnail" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
                       </div>
                       <div class="attachment-details">
-                        <h2 class="title"><a aria-describedby="attachment-2701269-accessibility-help" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">Apprenticeship funding rules summary of changes - {{_yearRangeStart}} to {{_yearRangeEnd}}</a></h2>
+                        <h2 class="title"><a aria-describedby="attachment-2701269-accessibility-help" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">Updates to the apprenticeship funding rules {{_yearRangeStart}} to {{_yearRangeEnd}}</a></h2>
                         <p class="metadata">
                             <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">111KB</span>, <span class="page-length">8 pages</span>
                         </p>
@@ -395,22 +395,32 @@
                       </div>
                     </section>
 
-                <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
-                  Details
+                <h2 class="gem-d-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
+                    Help and support
                 </h2>
-                <p>These documents set out the funding rules for employers, employer-providers and training providers. The funding rules
-                  cover the period August {{_yearRangeStart}} to July {{_yearRangeEnd}} and apply to all apprenticeship programmes
-                  starting on or after 1 August {{_yearRangeStart}}. This includes both apprenticeship frameworks and standards.</p>
+                <h3 class="gem-d-heading  gem-c-heading--mobile-top-margin  " >
+                    Training providers
+                </h3>
+                
+                <p>For help and support you can:</p>
+                <ul>
+                  <li>email us at <a href="mailto:SDE.servicedesk@education.gov.uk">SDE.servicedesk@education.gov.uk</a></li>
+                  <li>phone us on 0370 267 000</li>
+                  <li>contact your provider management advisor </li>
+                </ul>
 
-                <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
-                  Help and support
-                </h2>
-                <p>Training providers can contact us through our business operations service desk at <a
-                    href="mailto:SDE.servicedesk@education.gov.uk">SDE.servicedesk@education.gov.uk</a> or telephone 0370 267 0001. You
-                  can also contact your provider management manager/adviser.</p>
+                <h3 class="gem-d-heading  gem-c-heading--mobile-top-margin  " >
+                    Employers
+                </h3>
+                <p>For help and support, phone us on 0800 015 0600. </p>
+                
 
-                <p>Employers requiring further support can contact us through our apprenticeship business support team on 0800 015 0600.
-                </p>
+
+
+
+
+                
+
 
               </div>
             </div>
@@ -450,7 +460,9 @@
           <div class="gem-c-contextual-sidebar">
 
             <!-- Rendering taxonomy sidebar because the page is tagged to live taxons -->
-            <aside class="gem-c-taxonomy-navigation" data-module="track-click" role="complementary">
+            <!-- <aside class="gem-c-taxonomy-navigation" data-module="track-click" role="complementary">
+              
+              
               <h2 class="gem-c-taxonomy-navigation__heading">Related content</h2>
               <div data-track-count="sidebarTaxonSection">
                 <h3 class="gem-c-taxonomy-navigation__heading">
@@ -485,7 +497,9 @@
                   </ul>
                 </nav>
               </div>
-            </aside>
+
+
+            </aside> -->
 
 
           </div>
