--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,7 +16,13 @@
         <h2 class="govuk-heading-m">UI Versions</h2>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
             <li>
-                <a href="/7-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-7-0</a> (in progress)
+                <a href="/8-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-8-0</a> (in progress)
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li><span class="govuk-!-font-weight-bold">years hub</span> - pdf links, months and survey link added</li>
+                </ul>
+            </li>
+            <li>
+                <a href="/7-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-7-0</a> (tested 25/02 - 01/03)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">updates page</span> - divided updates over two dates, sub section labels are links</li>
                     <li><span class="govuk-!-font-weight-bold">updates (within sections)</span> - always visible option, latest updates listed under each sub-section heading</li>
