--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -318,13 +318,13 @@
                                 <p>You can view:</p>
                                 <ul class="govuk-list govuk-list--bullet">
                                     <li>
-                                        <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/733046/Apps_1819_PM_rules_.pdf">
-                                            apprenticeship performance management rules for training providers (PDF, 640KB)
+                                        <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/733039/1819_Funding_Rules_Summary_of_Changes_1.0.pdf">
+                                            updates to the apprenticeship funding rules 2018 to 2019 (PDF, 500KB)
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/733046/Apps_1819_PM_rules_.pdf">
-                                            updates to the apprenticeship funding rules 2018 to 2019 (PDF, 500KB)
+                                            apprenticeship performance management rules for training providers (PDF, 640KB)
                                         </a>
                                     </li>
                                 </ul>
@@ -350,8 +350,7 @@
                                     2017 to 2018 rules
                                 </h2>
                                 
-                                <p class="govuk-body">The 2017 to 2018 rules apply to apprenticeships that started between 1 August 2017 and 31 July 2018.</p>
-                                <p class="govuk-body">You can view:</p>
+                                <p class="govuk-body">The 2017 to 2018 rules apply to apprenticeships that started between 1 August 2017 and 31 July 2018:</p>
 
                                 <ul class="govuk-list govuk-list--bullet">
                                     <li>
@@ -384,6 +383,8 @@
                                 <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="2016">
                                     2016 to 2017 rules
                                 </h2>
+
+                                <p class="govuk-body">The 2016 to 2017 rules apply to apprenticeships that started between 1 August 2016 and 31 July 2017:</p>
 
                                 <ul class="govuk-list govuk-list--bullet">
                                         <li>
